# ros2-vicon-receiver

./: README.md
vicon_receiver/: CMakeLists.txt  package.xml
vicon_receiver/include/vicon_receiver/: communicator.hpp
vicon_receiver/launch/: client.launch.py
vicon_receiver/msg/: Marker.msg  Markers.msg
vicon_receiver/src/vicon_receiver/: communicator.cpp
